[gd_scene load_steps=7 format=2]

[ext_resource path="res://world/interactive_objects/chest/chest.gd" type="Script" id=1]
[ext_resource path="res://art/sheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8.06274, 7.25215 )

[sub_resource type="Animation" id=2]

resource_name = "close"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 224, 65, 16, 15 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "dissapear"
length = 1.0
loop = false
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 256, 65, 16, 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=4]

resource_name = "open"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 256, 65, 16, 15 ) ]
}

[node name="Chest" type="Node2D" index="0" groups=[
"Persist",
]]

script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
max_number_cristals = 10
min_number_cristals = 1

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 224, 65, 16, 15 )
_sections_unfolded = [ "Animation", "Region", "Visibility" ]

[node name="InteractiveArea" type="Area2D" parent="." index="1"]

position = Vector2( 0.115982, 0.115982 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 32
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveArea" index="0"]

shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/close = SubResource( 2 )
anims/dissapear = SubResource( 3 )
anims/open = SubResource( 4 )
blend_times = [  ]

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_entered" from="InteractiveArea" to="." method="_on_InteractiveArea_body_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


